<resources>
    <string name="app_name">goods</string>
    <string name="action_settings">Settings</string>
    <string name="label_stock">Stock</string>
    <string name="label_name">Name</string>
    <string name="label_category">Category</string>
    <string name="label_save">Save</string>
    <string name="label_description">Description</string>
    <string name="label_new_good">Good</string>
    <string-array name="categories">
        <item>Alat tulis</item>
        <item>Mainan</item>
        <item>Pakaian</item>
    </string-array>
</resources>
