<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity"
    android:padding="18dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_name"
        android:hint="@string/label_name"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_description"
        android:hint="@string/label_description"
        android:layout_marginBottom="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_stock"
            android:hint="@string/label_stock"
            android:inputType="numberDecimal"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="20dp"/>
        <Spinner
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:entries="@array/categories"
            android:prompt="@string/label_category"
            android:layout_marginRight="-2dp"
            android:layout_marginLeft="-2dp"
            android:layout_gravity="bottom"
            android:id="@+id/spn_category"/>
    </LinearLayout>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_save"
        android:layout_gravity="end
"/>
</LinearLayout>